<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.R.drawable" />

        <variable
            name="marvelCharactersViewModel"
            type="com.marvelverse.ui.MarvelCharactersViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/Widget.MaterialComponents.CollapsingToolbar.collapsed"
                app:contentScrim="@color/marvel_light_red_opaque"
                app:expandedTitleTextAppearance="@style/Widget.MaterialComponents.CollapsingToolbar.collapsed"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/image_marvel_character_details_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/marvel_character_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/marvel"
                    app:layout_collapseMode="pin" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="parallax"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/item_detail_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_marvel_character_details_description_label"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/description_label"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/text_marvel_character_details_description"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/fake_description"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_marvel_character_details_description_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_toggle_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/fab_margin"
            android:color="@color/marvel_red"
            android:contentDescription="@string/fab_button"
            android:src="@{marvelCharactersViewModel.isSelectedCharacterAFavoriteCharacter ? @drawable/ic_favorite : @drawable/ic_favorite_outlined }"
            app:backgroundTint="@color/marvel_red"
            app:layout_anchor="@+id/item_detail_scroll_view"
            app:layout_anchorGravity="top|end"
            app:rippleColor="@color/marvel_light_red"
            app:tint="@color/yellow" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>