<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/characters_margin"
    app:cardBackgroundColor="@color/marvel_red"
    app:cardCornerRadius="@dimen/card_default_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_marvel_character_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/marvel_character_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/marvel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/text_marvel_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>