...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_characters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/recycler_view_margin"
            android:layout_marginRight="@dimen/recycler_view_margin"
            android:visibility="@{marvelCharactersViewModel.isLoadingCharacters || marvelCharactersViewModel.isErrorLoadingCharacters || marvelCharactersViewModel.characters.empty ? View.INVISIBLE : View.VISIBLE }"
            app:layoutManager="LinearLayoutManager"
...
            app:layout_constraintTop_toTopOf="parent"
            tools:showIn="@layout/fragment_master">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_page_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical"
...
