<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/master_fragment"
        android:icon="@drawable/marvel_folder"
        android:title="@string/app_name" />
    <item
        android:id="@+id/favorites_fragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites" />
</menu>

